# trading_core

./: patterns.py  pyproject.toml  zone_detector.py
trading_core/: candles.py  confluence.py  historical_signals.py  live_signals.py  signal_builder.py  signals.py  trend.py  volatility.py  zone_detector.py  zones.py
