[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_core"
version = "0.1.0"
description = "Core trading logic for research and live trading"
authors = [
    { name="Stoyan Mihaylov" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas"
]
